Fix: Nonetype assignment to train data

--- a/project-template.ipynb
+++ b/project-template.ipynb
@@ -1247,7 +1247,7 @@
    "outputs": [],
    "source": [
     "# Drop 'casual' and 'registered' columns for the train dataset\n",
-    "train = train.drop(['casual', 'registered'], axis=1, inplace=True)\n"
+    "train = train.drop(['casual', 'registered'], axis=1)"
    ]
   },
   {
